# UFO

./: .gitignore  pyproject.toml  setup.py  test.py
ufo/: Intra_MLP.py  __init__.py  download_ufo_weights.py  model_image.py  model_video.py  model_video_flow.py  test.py  transformer.py
ufo.egg-info/: PKG-INFO  SOURCES.txt
