[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ufo"
version = "0.2.0"
description = "UFO - Unified Framework for Co-Object Segmentation"
authors = [ { name = "emanuele-artioli" } ]
readme = "readme.md"
requires-python = ">=3.8"
dependencies = ["torch"]
